package com.xbank.opf.sdk.security;

import java.util.UUID;

public class ApiTokenizationService {

    /**
     * Exchanges a successfully authorized Consent ID for an opaque API Access Token.
     */
    public String exchangeConsentForToken(String consentId) {
        System.out.println("Exchanging authorized Consent ID " + consentId + " for secure API Token...");
        // Mock OAuth2 Token generation
        return "opf_token_" + UUID.randomUUID().toString().replace("-", "");
    }

    /**
     * Refreshes an expired API token securely.
     */
    public String refreshToken(String refreshToken) {
        System.out.println("Refreshing API Token...");
        return "opf_token_" + UUID.randomUUID().toString().replace("-", "");
    }
}
