package com.xbank.opf.sdk.security;

import java.util.UUID;

public class ConsentManager {

    /**
     * Initiates the Strong Customer Authentication (SCA) flow.
     * In a real Open Finance scenario, this returns a secure URL where the 
     * user must be redirected to authenticate with their Bank/UAE Pass.
     */
    public String initiateConsentFlow(String scope) {
        System.out.println("Generating secure Consent Authorization URL for scope: " + scope);
        String consentId = UUID.randomUUID().toString();
        return "https://auth.opf.xbank.com/consent?id=" + consentId + "&scope=" + scope;
    }

    /**
     * Polling mechanism to check if the end-user has successfully authorized 
     * the consent via their mobile device.
     */
    public boolean checkConsentStatus(String consentId) {
        System.out.println("Checking SCA status for Consent ID: " + consentId);
        // Mocking successful authorization
        return true;
    }
}
